// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Alert - alert-danger renders correctly 1`] = `
<test>
  <div
    class="alert alert-danger"
    role="alert"
  >
    
  A simple primary alert—check it out!

  </div>
</test>
`;

exports[`OE - Alert - alert-dark renders correctly 1`] = `
<test>
  <div
    class="alert alert-dark"
    role="alert"
  >
    
  A simple primary alert—check it out!

  </div>
</test>
`;

exports[`OE - Alert - alert-info renders correctly 1`] = `
<test>
  <div
    class="alert alert-info"
    role="alert"
  >
    
  A simple primary alert—check it out!

  </div>
</test>
`;

exports[`OE - Alert - alert-light renders correctly 1`] = `
<test>
  <div
    class="alert alert-light"
    role="alert"
  >
    
  A simple primary alert—check it out!

  </div>
</test>
`;

exports[`OE - Alert - alert-primary renders correctly 1`] = `
<test>
  <div
    class="alert alert-primary"
    role="alert"
  >
    
  A simple primary alert—check it out!

  </div>
</test>
`;

exports[`OE - Alert - alert-secondary renders correctly 1`] = `
<test>
  <div
    class="alert alert-secondary"
    role="alert"
  >
    
  A simple primary alert—check it out!

  </div>
</test>
`;

exports[`OE - Alert - alert-success renders correctly 1`] = `
<test>
  <div
    class="alert alert-success"
    role="alert"
  >
    
  A simple primary alert—check it out!

  </div>
</test>
`;

exports[`OE - Alert - alert-warning renders correctly 1`] = `
<test>
  <div
    class="alert alert-warning"
    role="alert"
  >
    
  A simple primary alert—check it out!

  </div>
</test>
`;
